--- a/task 5 contact form/package.json
+++ b/task 5 contact form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task_4",
+  "name": "task-5-contact-form",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/devtools": "^4.3.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -22,7 +25,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "react-router-dom": "^6.25.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
